update user API model
