# docs/swagger.yaml
@@ -1,7 +1,36 @@
 definitions:
   user.GET.response:
     properties:
-      profile: {}
+      aud:
+        type: string
+      email:
+        type: string
+      email_verified:
+        type: boolean
+      exp:
+        type: integer
+      family_name:
+        type: string
+      given_name:
+        type: string
+      iat:
+        type: integer
+      iss:
+        type: string
+      locale:
+        type: string
+      name:
+        type: string
+      nickname:
+        type: string
+      picture:
+        type: string
+      sid:
+        type: string
+      sub:
+        type: string
+      updated_at:
+        type: string
     type: object
 info:
   contact: {}
