# routes/user/user.go
@@ -17,7 +17,21 @@ import (
 // @Router /user [get]
 func GET(c *fiber.Ctx) error {
 	type response struct {
-		Profile interface{} `json:"profile"`
+		Aud            string `json:"aud"`
+		Email          string `json:"email"`
+		Email_verified bool   `json:"email_verified"`
+		Exp            int    `json:"exp"`
+		Family_name    string `json:"family_name"`
+		Given_name     string `json:"given_name"`
+		Iat            int    `json:"iat"`
+		Iss            string `json:"iss"`
+		Locale         string `json:"locale"`
+		Name           string `json:"name"`
+		Nickname       string `json:"nickname"`
+		Picture        string `json:"picture"`
+		Sid            string `json:"sid"`
+		Sub            string `json:"sub"`
+		Updated_at     string `json:"updated_at"`
 	}
 
 	sess, err := global.Session.Get(c)
@@ -27,5 +41,5 @@ func GET(c *fiber.Ctx) error {
 
 	profile := sess.Get("profile")
 
-	return c.JSON(response{profile})
+	return c.JSON(profile)
 }
